--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,14 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 
-[lint.rust]
-unsafe_code = "forbid"
-unused = "allow"       # For development only 
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
 # -- Async
 tokio = { version = "1", features = ["full"] }
 futures = "0.3"
@@ -21,3 +16,4 @@ ollama-rs = { version = "0.1", features = ["stream"] }
 simple-fs = { version = "0.1", features = ["full"] }
 # -- Others
 derive_more = { version = "1.0.0-beta.6", features = ["from"] }
+tokio-stream = "0.1.14"
