--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ ollama-rs = { version = "0.1", features = ["stream"] }
 simple-fs = { version = "0.1", features = ["full"] }
 # -- Others
 derive_more = { version = "1.0.0-beta.6", features = ["from"] }
-tokio-stream = "0.1.14"
+serde_json = "1.0.114"
