--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,8 @@ tokio = { version = "1", features = ["full"] }
 futures = "0.3"
 # -- Ollama
 ollama-rs = { version = "0.1", features = ["stream"] }
+# -- Database
+surrealdb = "1.3.1"
 # -- Files
 simple-fs = { version = "0.1", features = ["full"] }
 # -- Others
